<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TotalApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="language">Languages Choose</string>
    <string name="cookiess">Save Cookies</string>
    <string name="fontsize">Font Size</string>
    <string name="welcome">Welcome to EVN Gateway</string>
    <string name="btnlogin">Log in</string>
    <string name="title_activity_management">ManagementActivity</string>
    <string name="usermanagement">User Management</string>
    <string name="addnew">Add New</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="userdetail">User Detail</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="status">Status</string>
    <string name="backtolist">Back To List</string>
    <string name="save">Save</string>
    <string name="title_activity_catalog">CatalogActivity</string>
    <string name="cataloge">Elictric Catalog</string>
    <string name="option">Option</string>
    <string name="title_exit">Exit</string>
    <string name="title_gotocatolog">Go to Catalog</string>
    <string name="title_gotocheckout">Go to checkout</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="title_savepass">Save Password</string>
    <string name="title_getdatafrom">Get Data from</string>
    <string name="english">English</string>
    <string name="vietnam">Việt Nam</string>
    <string name="title_activity_cart">CartActivity</string>

</resources>
